fixing bug - remove hardcoded secrets
Co-authored-by: Qwen-Coder <qwen-coder@alibabacloud.com>